# bowsie

./: .gitignore  .gitmodules  CHANGELOG.MD  LICENSE  README.md  bowsie-config.json  list.txt
asm/: katrina.asm  katrina_defines.asm  macro.asm  maxtile.asm  maxtile_defines.asm  owrev.asm  owrev_defines.asm  vldc9.asm  vldc9_defines.asm
routines/: distance.asm  erase_sprite.asm  finish_oam_write.asm  get_draw_info.asm  interact.asm  random_range.asm  spawn_sprite.asm  sub_horz_pos.asm  sub_offscreen.asm  sub_update_x_pos.asm  sub_update_y_pos.asm  sub_update_z_pos.asm  sub_vert_pos.asm
src/: CMakeLists.txt  CMakePresets.json  bowsie.cpp
src/include/: CMakeLists.txt  asar.ixx  map16.cpp  map16.h  meowmeow.ixx  misc.cpp  misc.h  rom.cpp  rom.h  settings.cpp  settings.h
src/include/asar/: CMakeLists.txt  addr2line.cpp  addr2line.h  arch-65816.cpp  arch-spc700.cpp  arch-superfx.cpp  asar.h  asar.ixx  asar_math.cpp  assembleblock.cpp  assembleblock.h  assocarr.h  autoarray.h  crc32.cpp  dll_helper.h  errors.cpp  errors.h  interface-cli.cpp  interface-lib.cpp  libcon.cpp  libmisc.h  libsmw.cpp  libsmw.h  libstr.cpp  libstr.h  macro.cpp  macro.h  main.cpp  std-includes.h  virtualfile.cpp  virtualfile.h  warnings.cpp  warnings.h
src/include/asar/platform/: file-helpers.cpp
src/include/asar/platform/generic/: file-helpers-generic.cpp
src/include/asar/platform/linux/: file-helpers-linux.cpp
src/include/asar/platform/windows/: file-helpers-win32.cpp
src/include/meowmeow/: meowmeow.cpp  meowmeow.h  meowmeow.ixx
src/include/rapidjson/: rapidjson.ixx
src/resources/: bowsie.rc
